--- a/app/src/main/res/drawable/ic_blue.xml
+++ b/app/src/main/res/drawable/ic_blue.xml
@@ -1,5 +1,4 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="40dp"
     android:height="40dp"
     android:viewportWidth="40"
@@ -7,13 +6,13 @@
 
 
     <path
-    android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-    android:strokeWidth="1"
-    android:strokeColor="#00000000"
-    android:fillColor="@color/blue3"
-    android:name="path1">
+        android:name="path1"
+        android:fillColor="@color/blue3"
+        android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+        android:strokeWidth="1"
+        android:strokeColor="#00000000">
 
-</path>
+    </path>
     <path
         android:fillColor="#00000000"
         android:pathData="M20,20m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
