--- a/app/src/main/res/drawable/ic_gray.xml
+++ b/app/src/main/res/drawable/ic_gray.xml
@@ -1,16 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="40dp"
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
 
     <path
+        android:name="path1"
+        android:fillColor="#7CFCF8"
         android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
         android:strokeWidth="1"
-        android:strokeColor="#00000000"
-        android:fillColor="#7CFCF8"
-        android:name="path1">
+        android:strokeColor="#00000000">
 
     </path>
     <path
