--- a/app/src/main/res/drawable/ic_oval_6.xml
+++ b/app/src/main/res/drawable/ic_oval_6.xml
@@ -1,24 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="8dp"
     android:height="8dp"
     android:viewportWidth="8"
     android:viewportHeight="8">
-    <path android:pathData="M4,4m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="7.824"
-                android:endY="7.824"
-                android:startX="0.048"
-                android:startY="0.048"
-                android:type="linear">
-                <item
-                    android:color="#FF3D1054"
-                    android:offset="0" />
-                <item
-                    android:color="#FF7B1E58"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
+    <path
+        android:name="path1"
+        android:fillColor="#FF3D1054"
+        android:pathData="M4,4m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0">
+
     </path>
 </vector>
