--- a/app/src/main/res/drawable/ic_rectangle4.xml
+++ b/app/src/main/res/drawable/ic_rectangle4.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="501.195"
     android:viewportHeight="369">
     <path
-        android:fillColor="#fff"
+        android:fillColor="#7b1e58"
         android:pathData="M67,57L434.195,57A10,10 0,0 1,444.195 67L444.195,302A10,10 0,0 1,434.195 312L67,312A10,10 0,0 1,57 302L57,67A10,10 0,0 1,67 57z" />
 </vector>
