--- a/app/src/main/res/drawable/pickershap.xml
+++ b/app/src/main/res/drawable/pickershap.xml
@@ -9,8 +9,7 @@
         android:fillColor="#00000000"
         android:pathData="M38,36m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
         android:strokeWidth="1"
-        android:strokeColor="#fff"
-        />
+        android:strokeColor="#fff" />
 
     <group
         android:translateX="26"
