--- a/app/src/main/res/layout/create_note.xml
+++ b/app/src/main/res/layout/create_note.xml
@@ -36,8 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_links_notebook"
-            />
+            app:srcCompat="@drawable/ic_links_notebook" />
 
         <ImageView
             android:id="@+id/change_color"
@@ -59,11 +58,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:hint="My diary "
         android:letterSpacing="0.01"
         android:lineSpacingExtra="6sp"
-        android:hint="My diary "
-        android:textColorHint="#4a4a4a"
         android:textColor="#4a4a4a"
+        android:textColorHint="#4a4a4a"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
