--- a/app/src/main/res/layout/home_pages.xml
+++ b/app/src/main/res/layout/home_pages.xml
@@ -88,7 +88,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/showall"
+            android:id="@+id/show_all_category"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center"
@@ -100,8 +100,6 @@
             android:textColor="#7b1e58"
             android:textSize="16sp" />
     </LinearLayout>
-
-
 
 
     <LinearLayout
@@ -120,28 +118,28 @@
         <LinearLayout
             android:id="@+id/addcatagory_img"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:scaleType="fitCenter"
-                android:layout_gravity="center"
                 app:srcCompat="@drawable/ic_add_notebook" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:layout_marginTop="8dp"
-                        android:lineSpacingExtra="4sp"
-                        android:text="Create Notebook"
-                        android:layout_gravity="center"
-                        android:textColor="#7b1e58"
-                        android:textSize="13sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="4sp"
+                android:text="Create Notebook"
+                android:textColor="#7b1e58"
+                android:textSize="13sp" />
 
         </LinearLayout>
 
@@ -149,79 +147,79 @@
             android:id="@+id/category_rv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"/>
+            android:layout_weight="2" />
 
     </LinearLayout>
 
-<!--        <ImageView-->
-<!--            android:id="@+id/centernote"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            app:srcCompat="@drawable/ic_links_notebook"/>-->
+    <!--        <ImageView-->
+    <!--            android:id="@+id/centernote"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            app:srcCompat="@drawable/ic_links_notebook"/>-->
 
 
-<!--&lt;!&ndash;        <ImageView&ndash;&gt;-->
-<!--&lt;!&ndash;            android:id="@+id/centernote"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_width="0dp"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-<!--&lt;!&ndash;            android:layout_weight="1"&ndash;&gt;-->
-<!--&lt;!&ndash;            app:srcCompat="@drawable/ic_links_notebook"/>&ndash;&gt;-->
+    <!--&lt;!&ndash;        <ImageView&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:id="@+id/centernote"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_width="0dp"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;            android:layout_weight="1"&ndash;&gt;-->
+    <!--&lt;!&ndash;            app:srcCompat="@drawable/ic_links_notebook"/>&ndash;&gt;-->
 
-<!--        <ImageView-->
-<!--            android:id="@+id/centernote1"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:tint="@color/orange"-->
-<!--            android:tintMode="screen"-->
-<!--            app:srcCompat="@drawable/ic_links_notebook" />-->
+    <!--        <ImageView-->
+    <!--            android:id="@+id/centernote1"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:tint="@color/orange"-->
+    <!--            android:tintMode="screen"-->
+    <!--            app:srcCompat="@drawable/ic_links_notebook" />-->
 
 
-<!--    </LinearLayout>-->
+    <!--    </LinearLayout>-->
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/imagenamelist"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginLeft="16dp"-->
-<!--        android:layout_marginRight="16dp"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:weightSum="3"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/imagelist">-->
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/imagenamelist"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginLeft="16dp"-->
+    <!--        android:layout_marginRight="16dp"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:weightSum="3"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/imagelist">-->
 
-<!--        <TextView-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:gravity="center_horizontal"-->
-<!--            android:lineSpacingExtra="4sp"-->
-<!--            android:text="Create Notebook"-->
-<!--            android:textColor="#7b1e58"-->
-<!--            android:textSize="13sp" />-->
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:gravity="center_horizontal"-->
+    <!--            android:lineSpacingExtra="4sp"-->
+    <!--            android:text="Create Notebook"-->
+    <!--            android:textColor="#7b1e58"-->
+    <!--            android:textSize="13sp" />-->
 
-<!--        <TextView-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:gravity="center_horizontal"-->
-<!--            android:lineSpacingExtra="5sp"-->
-<!--            android:text="Weekend Plans"-->
-<!--            android:textColor="#4a4a4a"-->
-<!--            android:textSize="15sp" />-->
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:gravity="center_horizontal"-->
+    <!--            android:lineSpacingExtra="5sp"-->
+    <!--            android:text="Weekend Plans"-->
+    <!--            android:textColor="#4a4a4a"-->
+    <!--            android:textSize="15sp" />-->
 
-<!--        <TextView-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:gravity="center_horizontal"-->
-<!--            android:lineSpacingExtra="5sp"-->
-<!--            android:text="To-Do"-->
-<!--            android:textColor="#4a4a4a"-->
-<!--            android:textSize="15sp" />-->
-<!--    </LinearLayout>-->
+    <!--        <TextView-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:gravity="center_horizontal"-->
+    <!--            android:lineSpacingExtra="5sp"-->
+    <!--            android:text="To-Do"-->
+    <!--            android:textColor="#4a4a4a"-->
+    <!--            android:textSize="15sp" />-->
+    <!--    </LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/header3"
@@ -246,7 +244,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/showall2"
+            android:id="@+id/show_all_note"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center"
@@ -441,19 +439,19 @@
     </androidx.cardview.widget.CardView>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/fab"
-        android:tint="@android:color/white"
-        app:backgroundTint="#3D0F54"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--        android:id="@+id/fab"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_margin="@dimen/fab_margin"-->
+    <!--        android:layout_marginEnd="8dp"-->
+    <!--        android:layout_marginBottom="8dp"-->
+    <!--        android:background="@drawable/fab"-->
+    <!--        android:tint="@android:color/white"-->
+    <!--        app:backgroundTint="#3D0F54"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:srcCompat="@android:drawable/ic_input_add" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
