--- a/app/src/main/res/layout/note_list.xml
+++ b/app/src/main/res/layout/note_list.xml
@@ -10,17 +10,16 @@
 
     <ImageView
         android:id="@+id/header1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_margin="16dp"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/navbox" />
+        app:srcCompat="@drawable/ic_rectangle4" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginVertical="16dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical">
 
 
