--- a/app/src/main/res/layout/row_note.xml
+++ b/app/src/main/res/layout/row_note.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -23,24 +24,42 @@
                 android:background="#f9f9f9"
                 android:weightSum="4">
 
-                <TextView
-                    android:id="@+id/note_name"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:drawableStart="@drawable/ic_oval_6"
-                    android:drawablePadding="16dp"
-                    android:drawableTint="@color/purple"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="5sp"
-                    android:text="Trip to San fran"
-                    android:textColor="#000000"
-                    android:textSize="17sp" />
+                    android:orientation="horizontal"
+                    android:weightSum="10">
+
+                    <ImageView
+                        android:id="@+id/title_img"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_oval_6" />
+
+                    <TextView
+                        android:id="@+id/note_name"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="9"
+                        android:drawablePadding="16dp"
+                        android:drawableTint="@color/purple"
+                        android:letterSpacing="0.01"
+                        android:lineSpacingExtra="5sp"
+                        android:text="Trip to San fran"
+                        android:textColor="#000000"
+                        android:textSize="17sp" />
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/note_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="end"
                     android:letterSpacing="0.01"
